--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 </div>
                 <img src="./images/post-vangogh.jpg" class="avatar-img">
                 <div class="flex-2">
-                    <img src="./images/icon-heart.png" class="width-23">
-                    <img src="./images/icon-comment.png" class="width-23">
-                    <img src="./images/icon-dm.png" class="width-23">
+                    <img src="./images/icon-heart.png" class="width-23 action">
+                    <img src="./images/icon-comment.png" class="width-23 action">
+                    <img src="./images/icon-dm.png" class="width-23 action">
                 </div>
-                <div >
+                <div>
                     <p class="bold para-1">21 likes</p>
                     <p class="para-1 margin-15-bottom"><span class="bold">vincey1853</span> just took a few mushrooms lol</p>
                 </div>
